--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,20 @@
-# Gemini API (Zorunlu - Varsayılan model)
-GEMINI_API_KEY=gemini-api-key
+# AI Model API Keys
+GEMINI_API_KEY=your_gemini_api_key_here
+ANTHROPIC_API_KEY=your_claude_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+MISTRAL_API_KEY=your_mistral_api_key_here
+COHERE_API_KEY=your_cohere_api_key_here
 
-# Claude API (Opsiyonel - MCP için)
-ANTHROPIC_API_KEY=anthropic-api-key
+# Ollama Configuration
+OLLAMA_ENABLED=false
+OLLAMA_HOST=http://localhost:11434
 
-# OpenAI API (Opsiyonel - MCP için)
-OPENAI_API_KEY=openai-api-key
-
-# Ollama Yerel Model (Opsiyonel - MCP için)
-OLLAMA_ENABLED=fakse
-#OLLAMA_HOST=http://localhost:11434 dont touch this
-
+# Cache Configuration
 CACHE_ENABLED=true
+CACHE_MAX_SIZE=500
 CACHE_TTL_HOURS=12
-CACHE_MAX_SIZE=500 
+
+# Deep Research Configuration
+ENABLE_DEEP_RESEARCH=true
+MAX_RESEARCH_RESULTS=3
+RESEARCH_TIMEOUT_MS=10000
