--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.55.0",
     "@google/generative-ai": "^0.24.1",
+    "@mistralai/mistralai": "^1.7.2",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@types/react-dropzone": "^4.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cohere-ai": "^7.17.1",
     "lucide-react": "^0.523.0",
+    "marked": "^15.0.12",
     "next": "15.3.4",
     "openai": "^5.7.0",
     "react": "^19.0.0",
