--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.523.0",
     "marked": "^15.0.12",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "openai": "^5.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
